--- a/package.json
+++ b/package.json
@@ -12,25 +12,27 @@
   "author": "xixi",
   "license": "UNLICENSED",
   "devDependencies": {
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-0": "^6.22.0",
-    "babel-runtime": "^6.22.0",
-    "css-loader": "^0.26.1",
-    "file-loader": "^0.10.0",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
+    "babel-runtime": "^6.23.0",
+    "css-loader": "^0.26.4",
+    "file-loader": "^0.10.1",
+    "style-loader": "^0.13.2",
+    "url-loader": "^0.5.8",
     "vee-validate": "^2.0.0-beta.22",
-    "vue": "^2.1.10",
-    "vue-hot-reload-api": "^2.0.8",
-    "vue-html-loader": "^1.2.3",
+    "vue": "^2.2.4",
+    "vue-hot-reload-api": "^2.0.11",
+    "vue-html-loader": "^1.2.4",
     "vue-loader": "^10.3.0",
     "vue-resource": "latest",
     "vue-router": "latest",
-    "vue-style-loader": "^2.0.0",
+    "vue-style-loader": "^2.0.4",
     "vuex": "latest",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.2",
     "webpack-merge": "^2.6.1"
   }
 }
