--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "vuex": "latest",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2",
-    "webpack-merge": "^2.6.1"
+    "webpack-merge": "^2.6.1",
+    "vue-tables-2": "latest"
+  },
+  "dependencies": {
+    "element-ui": "^1.2.4"
   }
 }
